# synthesis

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  synth-egui-spec-matrix.md  synth-egui-spec-tenori.md  synth-egui-spec.md
src/: main.rs  midi.rs  preset.rs
src/engine/: drum.rs  drum_sample.rs  effects.rs  filter.rs  matrix.rs  mod.rs  oscillator.rs  tenori.rs  voice.rs
src/gui/: app.rs  keyboard.rs  matrix_app.rs  mod.rs  oscilloscope.rs  tenori_app.rs
src/matrix_synth/: density_bar.rs  grid.rs  header.rs  mod.rs  shortcuts.rs  state.rs  theme.rs  transport.rs
src/matrix_synth/panels/: bass_preset.rs  draw_mode.rs  drum_kit.rs  effects.rs  envelope.rs  filter.rs  lfo.rs  mod.rs  oscillator.rs  scale.rs
src/matrix_synth/widgets/: hslider.rs  knob.rs  panel.rs  select_buttons.rs
src/synth_ui/: mod.rs  theme.rs
src/synth_ui/panels/: effects.rs  envelope.rs  filter.rs  keyboard_panel.rs  lfo.rs  master.rs  mod.rs  oscillator.rs  pads_panel.rs  voice_strip.rs
src/synth_ui/widgets/: hslider.rs  keyboard.rs  knob.rs  level_meter.rs  mod.rs  pads.rs  select_buttons.rs  vslider.rs
src/tenori_synth/: density_bar.rs  grid.rs  header.rs  history.rs  mod.rs  shortcuts.rs  state.rs  transport.rs
src/tenori_synth/panels/: bass_preset.rs  draw_mode.rs  drum_kit.rs  effects.rs  envelope.rs  filter.rs  lfo.rs  oscillator.rs  scale.rs
src/tenori_synth/widgets/: hslider.rs  knob.rs  mod.rs  panel.rs  select_buttons.rs
tests/: cli.rs
