[package]
name = "synthesis"
version = "0.13.0"
edition = "2024"
description = "Playground with Rust"
license = "MIT"

[dependencies]
cpal = "0.17"
fundsp = "0.23"
clap = { version = "4", features = ["derive"] }
eframe = "0.33"
egui_plot = "0.34"
midir = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
hound = "3.5"
